2022-09-24T08:09:15Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3117598800
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 26 64 / 28 66
* notice: next accum: outdated-unq outdated-all / unq all: 26 64 / 29 67
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-09-24]

2022-09-22T16:10:05Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3107012074
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 25 61 / 28 66
* notice: next accum: outdated-unq outdated-all / unq all: 26 64 / 28 66
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-09-08] / []

2022-09-19T16:09:36Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3083917257
* notice: last 14d: unq all: 3 5
* notice: prev accum: outdated-unq outdated-all / unq all: 24 60 / 28 66
* notice: next accum: outdated-unq outdated-all / unq all: 25 61 / 28 66
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-09-05] / []

2022-09-19T00:40:40Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3079238523
* notice: last 14d: unq all: 4 6
* notice: prev accum: outdated-unq outdated-all / unq all: 23 57 / 28 66
* notice: next accum: outdated-unq outdated-all / unq all: 24 60 / 28 66
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-09-04] / []

2022-09-17T08:09:09Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3072650965
* notice: last 14d: unq all: 5 9