@@ -1,3 +1,11 @@
+2022-09-30T16:14:54Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3160158969
+* notice: last 14d: unq all: 2 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 26 64 / 29 67
+* notice: next accum: outdated-unq outdated-all / unq all: 27 65 / 29 67
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-09-16] / []
+
 2022-09-24T08:09:15Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3117598800
 * notice: last 14d: unq all: 3 3
